<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/black"
        android:stretchColumns="0,1,2,3"
        android:theme="@style/Theme.MaterialComponents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/teInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_span="4"
                android:inputType="text" />
        </TableRow>


        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_span="4"
                android:text="@string/txt0" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.widget.Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_lightgrey_round"
                android:text="@string/txtClear"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btnBackspace"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_lightgrey_round"
                android:text="@string/txtBackspace"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btnPosNeg"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_lightgrey_round"
                android:text="@string/txtPosNeg"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_orange_round"
                android:text="@string/txtDivide"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <android.widget.Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_darkgrey_round"
                android:text="@string/txt7"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_darkgrey_round"
                android:text="@string/txt8"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_darkgrey_round"
                android:text="@string/txt9"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_orange_round"
                android:text="@string/txtMultiply"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <android.widget.Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_darkgrey_round"
                android:text="@string/txt4"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_darkgrey_round"
                android:text="@string/txt5"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_darkgrey_round"
                android:text="@string/txt6"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btnSubtract"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_orange_round"
                android:text="@string/txtSubtract"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <android.widget.Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_darkgrey_round"
                android:text="@string/txt1"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_darkgrey_round"
                android:text="@string/txt2"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_darkgrey_round"
                android:text="@string/txt3"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_orange_round"
                android:text="@string/txtAdd"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <android.widget.Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:layout_span="2"
                android:background="@drawable/btn_darkgrey_oval"
                android:text="@string/txt0"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btnDecimal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_darkgrey_round"
                android:text="@string/txtDecimal"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <android.widget.Button
                android:id="@+id/btnEquals"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8dp"
                android:background="@drawable/btn_orange_round"
                android:text="@string/txtEquals"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
<!--
    Resource used to make button colours render correctly
    https://stackoverflow.com/questions/64722733/android-background-drawable-not-working-in-button-since-android-studio-4-1

-->